2019-05-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/testSimpleTests.R: Converted from tests/simpleTests.R
	* inst/tinytest/testR_Format.R: Converted from tests/r_anytime.R
	* inst/tinytest/testUtilities.R: Converted from tests/utilities.R
	
2019-05-28  Dirk Eddelbuettel  <edd@debian.org>

        * tests/tinytest.R: New test driver using tinytest
        * DESCRIPTION (Suggests): Added tinytest
        * .travis.yml (install): Install tinytest

	* inst/tinytest/testValidate.R: Converted from tests/validate.R
	
2019-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled minor version

	* src/Makevars: Added to set C++11 avoiding a compiler warning
	* src/Makevars.win: Idem

2018-12-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled minor version

	* R/anytime.R: Add note (in roxygen code) about 'Europe/London' issue
	with pointers to four GH issue tickets and possible alternative.
	* man/anytime.Rd: Idem

	* src/anytime.cpp: Only if undefined, define BOOST_NO_AUTO_PTR

2018-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled minor version

	* tests/gh_issue_84.R: Added for apparent Fedora issue but more
	likely a TZ=Europe/London issue
	* .Rbuildignore: Added tests/gh_issue_84.R

2018-11-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.3

2018-11-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp: Minor update setting Boost define

	* R/anytime.R: Two more #nocov tags

2018-11-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled minor version

	* vignettes/anytime-introduction.Rmd: Restore vignette to vignettes/
	directory as builds succeed on Windows after several small changes
	* inst/doc/anytime-introduction.pdf: Removed
	* .Rbuildignore: Exclude vignettes/ directory

	* README.md: Update showing use of anydate() on integer (and
	alike) input correponding to the 0.3.0 release heuristic change